Getting mantis ready for JDK17 (#568)
* Getting ready for JDK17

* Updating mantis-shaded

* Fixing the test

* Keeping the old NodeCache

* Formatting

* Fixing a bug

---------

Co-authored-by: Sundaram Ananthanarayanan <sananthanarayanan@netflix.com>